feat: add skills batch upload
